       tkcon.tcl as it's really Jeff Hobb's work under "bourbonware".
   - BZ 284 - Ensure SpecTcldoes not crash if the VERSION file is not readable.

Released April 26, 2007

3.1-005
  May  3, 2007 - backport the 3.2 mod to drawing text in Xamine so something
                 is always drawn.
               - Fold in the jumbo buffer stuff for real.
  May 14, 2007 - BZ 297 - Deal with pathalogical case of a single channel on
                 an axis.
  May 16, 2007 - Correct error in -state enabled -> -state normal in 
	TreeParam/SpectrumGenerator.tcl
  May 16, 2007 - Correct error in TreeParam/SpectrumGenerator.tcl 
                 Duplicate Spectrum was not correctly retrieving the parameters
                 of the spectrum being duplicated.
  May 18, 2007 -  Fix CNSCLJumboBuffer::size32() member, was not correctly 
                  picking up the buffer revision level.
  May 28, 2007 - Fix conversion errors in channel -> screens whas moving
                 the dispay of summing errors around.
  May 30, 2007 - Fix up gate locations to match the 3.2 branch.
  June 6, 2007 - Ensure that Xamine superposition prompt messages will display
                 by making them children of the parent of the dialog rather
                 than children of the dialog (which gets hidden when
                 Xamine_error_msg is called).
  June 11,2007   Get a clean development build on ubuntu edgy eft (e.g. from cvs co).
  July 2, 2007   Fix error in 2d integration was returning stdevs not
                 FWHMs.
  July 12,2007 - Fix jumbo buffer handling in scriptable.
  Aug. 16,2007 - BZ 318, The Old GUI spectrum listing was showing the
                wrong gate applications unless the filter string was *
                because the applied gate used was determined using the wrong
                index into the application list.
  Sep 10, 2007 - BZ 318 again.. use hashtables for the gates since indices are
                 fragile wrt  the insertion of new spectra.